chore(pom): update junit and maven plugin versions
- Downgraded junit version from 5.13.4 to 5.12.2 for compatibility.
- Updated maven-surefire and maven-failsafe plugin versions to 3.2.5.
- Added configuration for maven-surefire plugin to support Java 21+ reflective access.